update openapi spec for real
